added owners for server
